Add support for SIIG x1 pci-e single parallel port card (JJ-E01211-S1)

PR:		kern/182217
Submitted by:	Craig Leres <leres@ee.lbl.gov>
MFC After:	1 week